Guard against faceProperties being invalid

In certain cases it seems faceProperties can be invalid. KConfig will
crash if we try to read from an invalid group, so we should make sure to
never attempt that.

BUG: 459710